@@ -5,7 +5,9 @@
 v1.114 URELEASED
 Fri, 26 Feb 2021 13:58:35 +0100 moocow
 	* added DTA::CAB::Chain::DE_free
-	  - for use with (modified) Helsinki hfst-german FST from https://sourceforge.net/projects/hfst/files/resources/morphological-transducers
+	- for use with (modified) Helsinki hfst-german FST from https://sourceforge.net/projects/hfst/files/resources/morphological-transducers
+Mon, 01 Mar 2021 09:57:53 +0100 moocow
+	* refactored DTA::CAB::Morph::Helsinki -> DTA::CAB::Morph::Helsinki::EN + DTA::CAB::Morph::Helsinki::DE
 
 v1.113 Thu, 16 Jul 2020 15:42:53 +0200 moocow
 	* added first-stab at DTA::CAB::Format:CONLLU conforming to https://universaldependencies.org/format.html
